k8s_learning/day3/deployment-with-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: localhost/k8s-day1:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
