k8s_learning/day3/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-nodeport
spec:
  selector:
    app: go-app
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
  type: NodePort
